<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <TextView
            android:id="@+id/carRegNoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/carRegNoLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/carRegNoInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:ems="10"
            android:hint="@string/carRegNoTxt"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toEndOf="@+id/carRegNoLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/engineLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="60dp"
            android:text="@string/engineLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carRegNoLabel" />

        <EditText
            android:id="@+id/engineInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/engineTxt"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.609"
            app:layout_constraintStart_toEndOf="@+id/engineLabel"
            app:layout_constraintTop_toBottomOf="@+id/carRegNoInput" />

        <TextView
            android:id="@+id/stateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:text="@string/stateLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/engineLabel" />

        <Spinner
            android:id="@+id/stateSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toEndOf="@+id/stateLabel"
            app:layout_constraintTop_toBottomOf="@+id/engineInput" />

        <TextView
            android:id="@+id/stateChosenLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/stateChosenLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stateLabel" />

        <TextView
            android:id="@+id/stateChosen"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text=""
            app:layout_constraintStart_toEndOf="@+id/stateChosenLabel"
            app:layout_constraintTop_toBottomOf="@+id/stateSpinner" />

        <TextView
            android:id="@+id/roadTaxLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/roadTaxLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stateChosenLabel" />

        <TextView
            android:id="@+id/roadTaxTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.149"
            app:layout_constraintStart_toEndOf="@+id/roadTaxLabel"
            app:layout_constraintTop_toBottomOf="@+id/stateChosen" />

        <Button
            android:id="@+id/calculateRoadTaxBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculateRoadTaxBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appTitle"
            app:layout_constraintVertical_bias="0.575" />

        <Button
            android:id="@+id/contactUsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/contactUsBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateRoadTaxBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
